--- a/config.ini
+++ b/config.ini
@@ -4,19 +4,18 @@
 ; Editable Fields:
 
 ; APP_ID and API_HASH for telethon: https://my.telegram.org/auth
-api_id = 
-api_hash = 
+api_id =15401829
+api_hash =5f0003ffbe1e34dd976d243aeb6b4cfe
 
 ; BOT_TOKEN: Write on telegram to @BotFather and follow the instruction
-bot_token = 
+bot_token = 6223925413:AAFfD803r7s-8uXduSqafafx5stuQKbXrDE
 
 ; Check the inside the config.inc.php file
-hostname = 
-username = 
-password = 
+hostname = 85.10.205.173
+username = sptluiz
+password = xpt2023a
 ; Give the name you want!
-database = 
-
+database = arduinotest
 
 
 
