--- a/config.ini
+++ b/config.ini
@@ -4,18 +4,18 @@
 ; Editable Fields:
 
 ; APP_ID and API_HASH for telethon: https://my.telegram.org/auth
-api_id =15401829
-api_hash =5f0003ffbe1e34dd976d243aeb6b4cfe
+api_id =
+api_hash =
 
 ; BOT_TOKEN: Write on telegram to @BotFather and follow the instruction
-bot_token = 6223925413:AAFfD803r7s-8uXduSqafafx5stuQKbXrDE
+bot_token = 6
 
 ; Check the inside the config.inc.php file
-hostname = 85.10.205.173
-username = sptluiz
-password = xpt2023a
+hostname = 
+username = 
+password = 
 ; Give the name you want!
-database = arduinotest
+database = 
 
 
 
